--- a/src/sample-tools/CMakeLists.txt
+++ b/src/sample-tools/CMakeLists.txt
@@ -16,14 +16,8 @@ message(STATUS "[sample-tools] ZLIB_VERSION_STRING : ${ZLIB_VERSION_STRING}")
 message(STATUS "[sample-tools] ZLIB_INCLUDE_DIRS : ${ZLIB_INCLUDE_DIRS}")
 message(STATUS "[sample-tools] ZLIB_LIBRARIES : ${ZLIB_LIBRARIES}")
 
-# 引入libuv库（uv）
-find_package(libuv CONFIG REQUIRED)
-
-# 引入curl库
-find_package(CURL CONFIG REQUIRED)
-message(STATUS "[sample-tools] CURL_VERSION_STRING : ${CURL_VERSION_STRING}")
-message(STATUS "[sample-tools] CURL_INCLUDE_DIR : ${CURL_INCLUDE_DIR}")
-message(STATUS "[sample-tools] CURL_LIBRARIES : ${CURL_LIBRARIES}")
+# 引入 glog
+find_package(glog CONFIG REQUIRED)
 
 add_library(${PROJECT_NAME} SHARED
     SampleTools.cpp
@@ -31,9 +25,8 @@ add_library(${PROJECT_NAME} SHARED
 )
 
 target_link_libraries(${PROJECT_NAME}
-    PRIVATE ZLIB::ZLIB
-    PRIVATE $<IF:$<TARGET_EXISTS:uv_a>,uv_a,uv>
-    PRIVATE CURL::libcurl
+    PUBLIC ZLIB::ZLIB
+    PUBLIC glog::glog
 )
 
 target_include_directories(${PROJECT_NAME}
