--- a/src/sample-tools/CMakeLists.txt
+++ b/src/sample-tools/CMakeLists.txt
@@ -1,9 +1,5 @@
-# The real minimum version will be checked by the qtbase project.
-# 3.16 is the absolute minimum though.
-cmake_minimum_required (VERSION 3.16)
-
-project(sample-tools)
 message("[sample-tools] -------- start")
+project(sample-tools)
 
 message(STATUS "[sample-tools] PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
 
@@ -38,8 +34,9 @@ target_include_directories(${PROJECT_NAME}
 )
 
 install(TARGETS ${PROJECT_NAME}
+    PUBLIC_HEADER DESTINATION include
     RUNTIME DESTINATION bin
-    LIBRARY DESTINATION lib
+    LIBRARY DESTINATION bin
     ARCHIVE DESTINATION lib
 )
 
