--- a/test/sample-datacenter-test/CMakeLists.txt
+++ b/test/sample-datacenter-test/CMakeLists.txt
@@ -9,7 +9,7 @@ find_package(GTest CONFIG REQUIRED)
 
 # 将源代码添加到此项目的可执行文件。
 add_executable (${PROJECT_NAME}
-    "SampleDataCenterTest.cpp"
+    SampleDataCenterTest.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
