--- a/test/sample-net-test/CMakeLists.txt
+++ b/test/sample-net-test/CMakeLists.txt
@@ -9,7 +9,8 @@ find_package(GTest CONFIG REQUIRED)
 
 # 将源代码添加到此项目的可执行文件。
 add_executable (${PROJECT_NAME}
-    "SampleNetTest.cpp"
+    SampleNetTest.cpp
+    TcpTest.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
