--- a/src/sample-net/CMakeLists.txt
+++ b/src/sample-net/CMakeLists.txt
@@ -15,10 +15,10 @@ message(STATUS "[sample-net] CURL_LIBRARIES : ${CURL_LIBRARIES}")
 add_library(${PROJECT_NAME} STATIC
     SampleNet.cpp
     SampleNet.h
-    TcpServer.cpp
-    TcpServer.h
-    TcpClient.cpp
-    TcpClient.h
+    "tcp/TcpServer.cpp"
+    "tcp/TcpServer.h"
+    "tcp/TcpClient.cpp"
+    "tcp/TcpClient.h"
 )
 
 target_link_libraries(${PROJECT_NAME}
