--- a/src/sample-net/CMakeLists.txt
+++ b/src/sample-net/CMakeLists.txt
@@ -15,11 +15,11 @@ message(STATUS "[sample-net] CURL_LIBRARIES : ${CURL_LIBRARIES}")
 add_library(${PROJECT_NAME} STATIC
     SampleNet.cpp
     SampleNet.h
-    # "tcp/TcpCommon.h"
-    # "tcp/TcpServer.cpp"
-    # "tcp/TcpServer.h"
-    # "tcp/TcpClient.cpp"
-    # "tcp/TcpClient.h"
+    "tcp/TcpCommon.h"
+    "tcp/TcpServer.cpp"
+    "tcp/TcpServer.h"
+    "tcp/TcpClient.cpp"
+    "tcp/TcpClient.h"
 )
 
 target_link_libraries(${PROJECT_NAME}
