--- a/test/sample-tools-test/CMakeLists.txt
+++ b/test/sample-tools-test/CMakeLists.txt
@@ -10,6 +10,7 @@ find_package(GTest CONFIG REQUIRED)
 # 将源代码添加到此项目的可执行文件。
 add_executable (${PROJECT_NAME}
     "SampleToolsTest.cpp"
+    "crypto/CryptoTest.cpp"
 )
 
 target_link_libraries(${PROJECT_NAME}
