--- a/src/sample-pb/CMakeLists.txt
+++ b/src/sample-pb/CMakeLists.txt
@@ -1,3 +1,11 @@
+#############################################################################
+## MIT License
+## 
+## Author	: xiaofeng.zhu
+## Support	: zxffffffff@outlook.com, 1337328542@qq.com
+## 
+#############################################################################
+
 message("[sample-pb] -------- start")
 project(sample-pb)
 
