--- a/test/sample-net-test/CMakeLists.txt
+++ b/test/sample-net-test/CMakeLists.txt
@@ -1,3 +1,11 @@
+#############################################################################
+## MIT License
+## 
+## Author	: xiaofeng.zhu
+## Support	: zxffffffff@outlook.com, 1337328542@qq.com
+## 
+#############################################################################
+
 message("[sample-net-test] -------- start")
 project ("sample-net-test")
 
