--- a/test/sample-tools-test/CMakeLists.txt
+++ b/test/sample-tools-test/CMakeLists.txt
@@ -1,3 +1,11 @@
+#############################################################################
+## MIT License
+## 
+## Author	: xiaofeng.zhu
+## Support	: zxffffffff@outlook.com, 1337328542@qq.com
+## 
+#############################################################################
+
 message("[sample-tools-test] -------- start")
 project ("sample-tools-test")
 
