--- a/src/sample-pb/CMakeLists.txt
+++ b/src/sample-pb/CMakeLists.txt
@@ -12,12 +12,12 @@ project(sample-pb)
 message(STATUS "[sample-pb] PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
 
 # 引入protobuf库
-find_package(protobuf CONFIG REQUIRED)
+find_package(Protobuf CONFIG REQUIRED)
 message(STATUS "[sample-pb] Protobuf_VERSION : ${Protobuf_VERSION}")
 message(STATUS "[sample-pb] Protobuf_INCLUDE_DIRS : ${Protobuf_INCLUDE_DIRS}")
 message(STATUS "[sample-pb] Protobuf_LIBRARIES : ${Protobuf_LIBRARIES}")
 
-# ::由于PROTOBUF_GENERATE_CPP只能编译一个目录下的proto，尽量选择手动生成pb.cc，参考general-cpp.bat
+# 由于PROTOBUF_GENERATE_CPP只能编译一个目录下的proto，尽量选择手动生成pb.cc，参考general-cpp.bat
 
 set(sample_files
     pb_cpp/MsgType.pb.cc
@@ -55,7 +55,7 @@ add_library(${PROJECT_NAME} STATIC
 )
 
 target_link_libraries(${PROJECT_NAME}
-    PUBLIC protobuf::libprotoc protobuf::libprotobuf protobuf::libprotobuf-lite
+    PUBLIC ${Protobuf_LIBRARIES}
 )
 
 # 不暴露protobuf相关内容，仅暴露SmaplePB
