--- a/test/sample-datacenter-test/CMakeLists.txt
+++ b/test/sample-datacenter-test/CMakeLists.txt
@@ -6,10 +6,10 @@
 ## 
 #############################################################################
 
-message("[sample-datacenter-test] -------- start")
 project ("sample-datacenter-test")
+message("[${PROJECT_NAME}] -------- start")
 
-message(STATUS "[sample-datacenter-test] PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
+message(STATUS "[${PROJECT_NAME}] PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
 
 # 引入 GTest
 enable_testing()
@@ -40,4 +40,4 @@ install(TARGETS ${PROJECT_NAME}
 include(GoogleTest)
 gtest_discover_tests(${PROJECT_NAME})
 
-message("[sample-datacenter-test] -------- done")
+message("[${PROJECT_NAME}] -------- done")
