--- a/src/sample-dynamic-lib/CMakeLists.txt
+++ b/src/sample-dynamic-lib/CMakeLists.txt
@@ -14,10 +14,15 @@ message(STATUS "[${PROJECT_NAME}] PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
 # dll导出宏
 add_compile_definitions(SAMPLE_DYNAMIC_LIB_EXPORT)
 
-add_library(${PROJECT_NAME} SHARED
+# 安装到 include
+file(GLOB_RECURSE EDV_INCLUDE_FILES
     define.h
-    SampleDynamicLib.cpp
     SampleDynamicLib.h
+)
+
+add_library(${PROJECT_NAME} SHARED
+    SampleDynamicLib.cpp
+    ${EDV_INCLUDE_FILES}
 )
 
 target_link_libraries(${PROJECT_NAME}
@@ -26,6 +31,11 @@ target_link_libraries(${PROJECT_NAME}
 
 target_include_directories(${PROJECT_NAME}
     PUBLIC ${PROJECT_SOURCE_DIR}
+)
+
+set_target_properties(${PROJECT_NAME}
+    PROPERTIES
+    PUBLIC_HEADER "${EDV_INCLUDE_FILES}"
 )
 
 install(TARGETS ${PROJECT_NAME}
