--- a/test/sample-tools-test/CMakeLists.txt
+++ b/test/sample-tools-test/CMakeLists.txt
@@ -20,6 +20,7 @@ add_executable (${PROJECT_NAME}
     SampleToolsTest.cpp
     crypto/CryptoTest.cpp
     thread/threadpool_test.cpp
+    thread/threadtimer_test.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
