--- a/src/sample-main/CMakeLists.txt
+++ b/src/sample-main/CMakeLists.txt
@@ -11,7 +11,7 @@ message("[${PROJECT_NAME}] -------- start")
 
 message(STATUS "[${PROJECT_NAME}] PROJECT_SOURCE_DIR : ${PROJECT_SOURCE_DIR}")
 
-# 将源代码添加到此项目的可执行文件。
+# Public 头文件
 add_executable (${PROJECT_NAME}
     "main.cpp"
 )
