--- a/src/sample-tools/CMakeLists.txt
+++ b/src/sample-tools/CMakeLists.txt
@@ -45,6 +45,7 @@ file(GLOB_RECURSE include_headers
 
 add_library(${PROJECT_NAME} STATIC
     SampleTools.cpp
+    ${include_headers}
 )
 
 target_link_libraries(${PROJECT_NAME}
