--- a/test/sample-net-test/CMakeLists.txt
+++ b/test/sample-net-test/CMakeLists.txt
@@ -17,8 +17,9 @@ find_package(GTest CONFIG REQUIRED)
 
 add_executable (${PROJECT_NAME}
     SampleNetTest.cpp
-    http/HttpTest.cpp
-    tcp/tcp_test.cpp
+    HttpTest.cpp
+    tcp_test.cpp
+    http_server_test.cpp
 )
 
 target_link_libraries(${PROJECT_NAME}
